<resources>
    //Nama Aplikasi
    <string name="app_name">GameLab</string>

    //String pada Welcome Screen Landing Page
    <string name="name_aplication">GameLab</string>
    <string name="name_application_1">GAME</string>
    <string name="name_application_2">Lab</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="description_slide">Slide 1</string>
    <string name="description_spotlight">spotlight</string>
    <string name="description_course">Course</string>
    <string name="description_logo">Logo GameLab</string>

    <string name="welcome_info">GameLab adalah aplikasi xxxxxxxx yang telah mendapatkan lisensi dari Kemendikbud untuk mengadakan pelatihan atau kursus tentang komputer Akuntansi sekaligus menyediakan aplikasi untuk dipergunakan sebagaimana mestinya dengan cara berlangganan. Anda mendapatkan course Accounting, Anda pun mendapatkan aplikasinya.</string>
    <string name="register_or_login">Resgister sekarang atau log in.</string>
    <string name="welcome_course_1">Course 1</string>
    <string name="welcome_course_2">Course 2</string>
    <string name="welcome_course_3">Course 3</string>
    <string name="welcome_course_4">Course 4</string>

    //String pada Login page dan Sign up page
    <string name="message_login_page">Masukkan data dulu</string>
    <string name="register_here">Register here</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="account_already">Already have an account?</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_new_here">New here? Register now</string>
    <string name="login_activity">Log in</string>
    <string name="requires_name">Nama harus diisi</string>
    <string name="requires_email">Email harus diisi</string>
    <string name="requires_password">Password harus diisi</string>
    <string name="password_error">Password kurang dari 6 karakter</string>
    <string name="sign_in">Sign in</string>
    <string name="login_failed">Login gagal</string>
    <string name="wrong_credentials">Data Salah</string>

    <string name="button_register">Register</string>
    <string name="button_login">Log in</string>

    //String untuk artikel dan search
    <string name="search_hint">Search</string>
    <string name="search_button">Search Button</string>
    <string name="avatar_desc">Avatar</string>

    //string copyright
    <string name="copyright_bottom">version 1.0\n &#169; Bangkit Academy 2022 - Capstone C22-PS175</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>

    //String pada User Profile
    <string name="back_home">Beranda</string>
    <string name="user_avatar">Avatar Profile</string>
    <string name="user_full_name">Nama Lengkap</string>
    <string name="user_username">Username</string>
    <string name="user_course_ID">ID Course</string>
    <string name="user_email">Alamat E-mail</string>
    <string name="user_phone">Nomor Telepon</string>
    <string name="user_address">Alamat Lengkap</string>
    <string name="user_province">Provinsi</string>
    <string name="user_city">Kota/Kabupaten</string>
    <string name="user_course_package">Paket Course Saat ini</string>
    <string name="user_content_tab_detail">Informasi pribadi</string>
    <string name="user_logout">Keluar</string>
    <string name="user_detail_profile">Detail Profile</string>
    <string name="user_logout_detail">Anda telah keluar dari GameLab</string>

    //String Support
    <string name="fab_support">Anda telah menghubungi Technical Support</string>
    <string name="support_text_message">Say something...</string>
    <string name="support_send_success">Berhasil terkirim</string>
    <string name="support_send_error">Gagal terkirim</string>
    <string name="support_agent_activity">Support Agent</string>

    //String untuk courses
    <string name="advanced_c">Advanced C# untuk Game Development</string>
    <string name="lanjutan_class">Lanjutan class</string>
    <string name="durasi_9_menit">Durasi: 9 menit</string>
    <string name="satu_jam">1 Jam</string>
    <string name="mahir">Mahir</string>
    <string name="isi_kursus">Isi Kursus</string>
    <string name="pengenalan_class">Pengenalan Class</string>
    <string name="pengenalan_constructor">Pengenalan Constructor</string>
    <string name="_30_menit">30 Menit</string>
    <string name="masuk_course_detail">Masuk</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile">Profile</string>

    //String dummy data user profile. Bisa dihapus jika sudah terkoneksi dengan API
    <string name="dummy_data_username">nicolastse</string>
    <string name="dummy_data_name">Nicolas Tse</string>
    <string name="dummy_data_idcourse">ML-0718771</string>
    <string name="dummy_data_avatar">https://avatars.githubusercontent.com/u/2734357?v=4</string>
    <string name="dummy_data_email">nicolas_tse@gmail.com</string>
    <string name="dummy_data_phone">08155555555</string>
    <string name="dummy_data_address">Jl. Kebahagian Sejahtera Selamanya No. 88 Gg. Terminator Jilid II</string>
    <string name="dummy_data_province">Birmingham</string>
    <string name="dummy_data_city">Los Angeles</string>
    <string name="dummy_data_packagecourse">Paket Lite</string>

    //String untuk dashboard
    <string name="hello_user">Hello User!</string>
    <string name="advanced_c_sharp">Advanced C#</string>
    <string name="ini_ada_beberapa_rekomendasi_untukmu">Ini ada beberapa rekomendasi untukmu..</string>
    <string name="siap_untuk_belajar">Siap untuk belajar?</string>
    <string name="c_untuk_advanced">C# untuk Advanced</string>
    <string name="_15_jam">15 jam</string>
    <string name="kembali">Kembali</string>

    //String untuk Google Sign
    <string name="sign_out">Sign Out</string>
    <string name="send_success">Berhasil terkirim</string>
    <string name="send_error">Gagal terkirim</string>
    <string name="what_is_game_development">What is game development?</string>
    <string name="artikel_15_menit_baca">Artikel, 15 menit baca</string>
    <string name="penulis_nicholas_haddou">Penulis: Nicholas Haddou</string>
    <string name="apa_itu_game_development">Apa itu game development?</string>
    <string name="article_1">Sebuah game developer tidak harus menjadi seorang programmer, melainkan bisa juga menjadi seorang sound designer, atau bahkan seorang game tester. Pengembangan sebuah game dapat dilakukan oleh sebuah perusahaan besar, ataupun sebuah tim kecil, yang sering dikenal sebagain indie developer. Untuk terjun ke dunia pengembangan game, Anda tidak perlu bisa coding, tapi juga bisa berkecimpung dalam pembuatan asset.</string>
    <string name="article_2">Jadi janganlah terintimidasi untuk terjun ke dunia game development, langkah pertama untuk mencapai apapun adalah dengan mencoba!</string>

</resources>
