<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="238dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:text="@string/hello_user"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="23dp"
        android:layout_marginTop="4dp"
        android:text="@string/siap_untuk_belajar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="246dp"
        android:layout_height="18dp"
        android:alpha="20"
        android:text="@string/ini_ada_beberapa_rekomendasi_untukmu"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="149dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:text="@string/c_untuk_advanced"
        app:layout_constraintEnd_toStartOf="@+id/button_course_other_dashboard"
        app:layout_constraintTop_toBottomOf="@+id/button_course_csharp_dashboard" />

    <TextView
        android:layout_width="57dp"
        android:layout_height="20dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/_15_jam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageButton
        android:id="@+id/button_course_csharp_dashboard"

        android:layout_width="167dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/learning_man"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/advanced_c_sharp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_course_other_dashboard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/button_course_other_dashboard"

        android:layout_width="138dp"
        android:layout_height="255dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/vert"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/advanced_c_sharp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>