<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.course.article.ArticleActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="283dp"
        android:layout_height="181dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/gamedev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_article"
        android:layout_width="312dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:text="@string/apa_itu_game_development"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="131dp"
        android:layout_height="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/penulis_nicholas_haddou"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_article" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="331dp"
        android:layout_height="160dp"
        android:layout_marginTop="14dp"
        android:text="@string/article_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/asset_make"
        android:layout_width="166dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/game_asset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="160dp"
        android:layout_height="117dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:text="@string/article_2"
        app:layout_constraintEnd_toStartOf="@+id/asset_make"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/button_article_back"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:text="@string/kembali"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>