<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.course.coursedetail.CourseDetailActivity">

    <TextView
        android:id="@+id/textViewCourseDetailAdvancedCSharp"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:text="@string/advanced_c"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/duration_course_1jam"
        android:layout_width="41dp"
        android:layout_height="24dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="7dp"
        android:text="@string/satu_jam"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textViewCourseDetailAdvancedCSharp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/difficulty_mahir"
        android:layout_width="45dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/mahir"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textViewCourseDetailAdvancedCSharp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView

        android:layout_width="94dp"
        android:layout_height="17dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:text="@string/_30_menit"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="94dp"
        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        android:text="@string/_30_menit"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:layout_marginTop="36dp"
        android:text="@string/pengenalan_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="176dp"
        android:layout_height="23dp"
        android:layout_marginTop="100dp"
        android:text="@string/pengenalan_constructor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="129dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/isi_kursus"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="246dp"
        android:layout_height="303dp"
        android:layout_marginTop="116dp"
        android:src="@drawable/csharp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="45dp"
        android:layout_height="23dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCourseDetailAdvancedCSharp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="33dp"
        android:layout_height="23dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCourseDetailAdvancedCSharp" />

    <Button
        android:id="@+id/button_masuk_course"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/masuk_course_detail"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>